fix scrollbar by adding min-height to main tag

--- a/src/client/_scss/main.scss
+++ b/src/client/_scss/main.scss
@@ -37,7 +37,7 @@ body {
 main {
   display: flex;
   margin-bottom: 2rem;
-  height: 100%;
+  min-height: 1000px;
   @media (min-width: 1366px) {
     justify-content: center;
   }
